# W4B-RS

./: .gitignore  Cargo.toml  README.md  book.toml  w4b.sublime-workspace
md/: LIBAPI.md  LIBTUI.md  README.md  SUMMARY.md  TUI.md
src/: api.rs  cli.rs  main.rs  secrets.rs  secrets_dev.rs  tui-ng.rs  tui.rs
src/lib/: libapi.rs  libtui.rs  mod.rs
